# integral-image-computation

./: .gitignore  CMakeLists.txt
scripts/: execute.sh
src/: main.cpp
